--- a/index.html
+++ b/index.html
@@ -6,30 +6,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script src="https://use.fontawesome.com/9408f9b907.js"></script>
     <header>
-        <div class="logo">
-            <h2>Danki Code</h2>
-        </div><!--logo-->
+        <div class="center">
+            <div class="logo">
+                <h2>Danki Code</h2>
+            </div><!--logo-->
 
-        <div class="menu-desktop">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </div><!--menu-desktop-->
-
-        <div class="menu-mobile">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </div><!--menu-mobile-->
+            <div class="menu-desktop">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </div><!--menu-desktop-->
+            <div class="menu-mobile">
+                <a class="icon-menu"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </div><!--menu-mobile-->
+        </div><!--center-->
     </header>
+
     <script src="all.min.js"></script>
+    <script>
+        var menuBar = document.querySelector('.menu-mobile a');
+
+        menuBar.addEventListener('click',()=>{
+            e.preventDefault();
+            let menuMobile = document.querySelector('.menu-mobile ul');
+            menuMobile.classList.add(show-menu);
+        });
+    </script>
 </body>
 </html>
